# desktop-markdown-sync

./: .dockerignore  .gitignore  .pymarkdown.json  .yamllint.yml  DEVPLAN.md  Makefile  REQUESTED.predict_vs_actual.inline.md  REQUESTED.tables_timings.md  install.md  pyproject.toml  readme.md
BHAKTI/: 01-title-screen.md  index.md  (+10 more)
artifacts/outputs/manual-harness/home/standart/subprojects/desktop_markdown_sync/: AGENTS.md  DEVPLAN.md  Makefile  REQUESTED.predict_vs_actual.inline.md  install.md  pyproject.toml  readme.md
artifacts/outputs/manual-harness/home/standart/subprojects/desktop_markdown_sync/.github/workflows/: coverage.yml  kali-harness.yml  quality.yml  static-analysis.yml
artifacts/outputs/manual-harness/home/standart/subprojects/desktop_markdown_sync/BHAKTI/: 04-shrine-interaction-screen.md  05-murti-rotation-view.md  07-chant-transcript-overlay.md  08-translation-comparison-screen.md  09-verse-annotation-screen.md  12-library-shelf-browser.md  13-manuscript-zoom-screen.md  16-puzzle-seal-screen.md  18-collection-archive-screen.md
artifacts/outputs/manual-harness/home/standart/subprojects/desktop_markdown_sync/PIZZAGAME/: 02-mission-dispatch-map.md  05-mobile-keyboard-breach.md  06-cctv-relay-view.md  08-scooter-upgrade-garage.md  10-rooftop-wifi-scan.md  11-night-market-inventory-screen.md  12-shift-summary-screen.md  index.md
artifacts/outputs/manual-harness/home/standart/subprojects/desktop_markdown_sync/SHIPGIRLS/: 01-title-screen.md  02-monastery-fleet-map.md  03-carrier-bridge-hud.md  04-flight-deck-launch-control.md  05-terminal-link-breach.md  10-combat-evasion-overlay.md
artifacts/outputs/manual-harness/home/standart/subprojects/desktop_markdown_sync/fixtures/: desktop-03.md  desktop-04.md  desktop-05.md  desktop-07.md  desktop-10.md  desktop-13.md  desktop-14.md  desktop-16.md  desktop-17.md  desktop-20.md
artifacts/outputs/manual-harness/home/standart/subprojects/desktop_markdown_sync/fixtures/console-games/: 01-super-mario-bros-3.md  02-a-link-to-the-past.md  03-super-metroid.md  07-tony-hawks-pro-skater-2.md  08-halo-combat-evolved.md  11-resident-evil-4.md  13-god-of-war-ii.md  14-super-mario-galaxy.md  16-red-dead-redemption.md  17-the-last-of-us.md  18-bloodborne.md  20-elden-ring.md
artifacts/outputs/manual-harness/home/standart/subprojects/desktop_markdown_sync/packaging/debian/usr/lib/systemd/user/: desktop-markdown-sync.service
artifacts/outputs/manual-harness/home/standart/subprojects/desktop_markdown_sync/scripts/: build_deb.py  check_file_formats.py  coverage_gate.py  fixture_pack_demo_app.py
artifacts/outputs/manual-harness/home/standart/subprojects/desktop_markdown_sync/skills/desktop-markdown-sync-reconcile/: SKILL.md
artifacts/outputs/manual-harness/home/standart/subprojects/desktop_markdown_sync/skills/desktop-window-fixture-ocr/helpers/accessibility-probe/: Cargo.toml
artifacts/outputs/manual-harness/home/standart/subprojects/desktop_markdown_sync/skills/desktop-window-fixture-ocr/helpers/accessibility-probe/src/: main.rs
artifacts/outputs/manual-harness/home/standart/subprojects/desktop_markdown_sync/skills/desktop-window-fixture-ocr/references/: fixture-format.md
artifacts/outputs/manual-harness/home/standart/subprojects/desktop_markdown_sync/skills/desktop-window-fixture-ocr/scripts/: collect_fixture_context.py
artifacts/outputs/manual-harness/home/standart/subprojects/desktop_markdown_sync/src/desktop_markdown_sync/: __init__.py  codex_reconcile.py  desktop_backend.py  fixture_notes.py  harness.py  models.py  service.py  snapshot.py
artifacts/outputs/manual-harness/home/standart/subprojects/desktop_markdown_sync/tests/: test_cli.py  test_markdown_sync.py  test_render.py  test_sync_cli.py
(+82 files in other folders)
